Modified notebook & changed table to csv file

--- a/food_insecurity.ipynb
+++ b/food_insecurity.ipynb
@@ -2596,6 +2596,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 159,
+   "id": "e34ca17d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "district_yield=yield_long.to_csv('District_yield.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 148,
    "id": "670c3d3e",
    "metadata": {},
@@ -2944,6 +2954,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 158,
+   "id": "4457c596",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "productivity_csv=df_long.to_csv('District_crop_productivity.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 152,
    "id": "6983d73a",
    "metadata": {},
@@ -3176,109 +3196,6 @@
     "#clean the crop column for better readability\n",
     "df_long['crop'] = df_long['crop'].str.replace('_total_production_kg', '').str.capitalize()\n",
     "df_long\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "id": "416c8c9c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>OBJECTID</th>\n",
-       "      <th>SUBCOUNTY_NAME</th>\n",
-       "      <th>DISTRICT_NAME</th>\n",
-       "      <th>total_population</th>\n",
-       "      <th>Area</th>\n",
-       "      <th>sorghum_yield_Kg/ha</th>\n",
-       "      <th>maize_yield_Kg/ha</th>\n",
-       "      <th>total_crop_area_ha</th>\n",
-       "      <th>sorghum_area_ha</th>\n",
-       "      <th>maize_area_ha</th>\n",
-       "      <th>sorghum_total_production_kg</th>\n",
-       "      <th>maize_total_production_kg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>263</td>\n",
-       "      <td>KACHERI</td>\n",
-       "      <td>KOTIDO</td>\n",
-       "      <td>17244</td>\n",
-       "      <td>1067176155</td>\n",
-       "      <td>354.207411</td>\n",
-       "      <td>1137.467019</td>\n",
-       "      <td>7023.533691</td>\n",
-       "      <td>6434.342449</td>\n",
-       "      <td>528.124229</td>\n",
-       "      <td>2279091.779</td>\n",
-       "      <td>600723.8929</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>264</td>\n",
-       "      <td>KOTIDO</td>\n",
-       "      <td>KOTIDO</td>\n",
-       "      <td>52771</td>\n",
-       "      <td>597575188</td>\n",
-       "      <td>367.890523</td>\n",
-       "      <td>1162.996687</td>\n",
-       "      <td>13587.990760</td>\n",
-       "      <td>12455.592640</td>\n",
-       "      <td>824.767081</td>\n",
-       "      <td>4582294.492</td>\n",
-       "      <td>959201.3825</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   OBJECTID SUBCOUNTY_NAME DISTRICT_NAME  total_population        Area  \\\n",
-       "0       263        KACHERI        KOTIDO             17244  1067176155   \n",
-       "1       264         KOTIDO        KOTIDO             52771   597575188   \n",
-       "\n",
-       "   sorghum_yield_Kg/ha  maize_yield_Kg/ha  total_crop_area_ha  \\\n",
-       "0           354.207411        1137.467019         7023.533691   \n",
-       "1           367.890523        1162.996687        13587.990760   \n",
-       "\n",
-       "   sorghum_area_ha  maize_area_ha  sorghum_total_production_kg  \\\n",
-       "0      6434.342449     528.124229                  2279091.779   \n",
-       "1     12455.592640     824.767081                  4582294.492   \n",
-       "\n",
-       "   maize_total_production_kg  \n",
-       "0                600723.8929  \n",
-       "1                959201.3825  "
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df2.head(2)"
    ]
   },
   {
